--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.5",
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
+    "universal-cookie": "^7.0.1",
     "vue": "^3.3.11",
     "vue-i18n": "^9.8.0",
     "vue-router": "^4.2.5",
